--- a/index.html
+++ b/index.html
@@ -9,12 +9,93 @@
 
 	<body>
 		<div class="wrapper">
-			<!-- @import "header.html" -->
-			<div class="content">
-				
+			<div class="FirstScreen ibg">
+				<img src="../Img/Main/background.jpg" alt="">
+<header>
+	<div class="container">
+		<div class="header-body">
+			<div class="header-body-column">
+				<nav class="menu left">
+					<a href="" class="menu__item btn btn--burger"></a>
+					<a href="" class="menu__item">Tour</a>
+					<a href="" class="menu__item">Features</a>
+					<a href="" class="menu__item">Pricing</a>
+				</nav>
 			</div>
-			<!-- @import "footer.html" -->
+			<div class="logo">
+				<img src="../Img/Header/Logo.png" alt="">
+			</div>
+			<div class="header-body-column">
+				<nav class="menu right">
+					<a href="" class="menu__item">Help</a>
+					<a href="" class="menu__item">Contacts</a>
+					<a href="" class="menu__item btn btn--blue"><span>Get App</span></a>
+				</nav>
+			</div>
 		</div>
-		<!-- @import "js.html" -->
-	</body>
+	</div>
+</header>				<div class="main">
+					<div class="container first">
+						<div class="main-body">
+							<div class="main__title">
+								What happens tomorrow?
+							</div>
+							<div class="main__text">
+								The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
+							</div>
+							<div class="main-button">
+								<a href="#" class="main__button btn btn--grey">
+									<span>Watch Video</span>
+								</a>
+							</div>
+							<div class="main__phone ibg">
+								<img src="../Img/Main/phone2.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="features">
+				<div class="container small">
+					<div class="features-columns">
+						<div class="features__item">
+							<div class="item__image">
+								<img src="../Img/Features/01.png" alt="">
+							</div>
+							<div class="item__title">
+								Real-time all the time
+							</div>
+							<div class="item__text">
+								<p>Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
+
+								<p>Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.</p>
+							</div>
+						</div>
+						<div class="features__item">
+							<div class="item__image">
+								<img src="../Img/Features/02.png" alt="">
+							</div>
+							<div class="item__title">
+								Adopt without any obstacles
+							</div>
+							<div class="item__text">
+								<p>This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that before!' she said.</p>
+
+								<p>This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such abstruse matters.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+<footer>
+	<div class="container">
+		<div class="footer-body">
+			
+		</div>
+	</div>
+</footer>		</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- <script src="http://maps.google.com/maps/api/js?sensor=false&amp;key="></script> -->
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="Js/main.js"></script>	</body>
 </html>
