--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="FirstScreen ibg">
-				<img src="../Img/Main/background.jpg" alt="">
+				<img src="Img/Main/background.jpg" alt="">
 <header>
 	<div class="container">
 		<div class="header-body">
@@ -49,7 +49,7 @@
 								</a>
 							</div>
 							<div class="main__phone ibg">
-								<img src="../Img/Main/phone2.png" alt="">
+								<img src="Img/Main/phone2.png" alt="">
 							</div>
 						</div>
 					</div>
@@ -60,7 +60,7 @@
 					<div class="features-columns">
 						<div class="features__item">
 							<div class="item__image">
-								<img src="../Img/Features/01.png" alt="">
+								<img src="Img/Features/01.png" alt="">
 							</div>
 							<div class="item__title">
 								Real-time all the time
@@ -73,7 +73,7 @@
 						</div>
 						<div class="features__item">
 							<div class="item__image">
-								<img src="../Img/Features/02.png" alt="">
+								<img src="Img/Features/02.png" alt="">
 							</div>
 							<div class="item__title">
 								Adopt without any obstacles
