--- a/#Source/header.html
+++ b/#Source/header.html
@@ -10,7 +10,7 @@
 				</nav>
 			</div>
 			<div class="logo">
-				<img src="../Img/Header/Logo.png" alt="">
+				<img src="Img/Header/Logo.png" alt="">
 			</div>
 			<div class="header-body-column">
 				<nav class="menu right">
