--- a/#Source/header.html
+++ b/#Source/header.html
@@ -16,7 +16,7 @@
 				<nav class="menu right">
 					<a href="" class="menu__item">Help</a>
 					<a href="" class="menu__item">Contacts</a>
-					<a href="" class="menu__item btn btn--blue"><span>Get App</span></a>
+					<a href="" class="menu__item btn btn--blue btn--get"><span>Get App</span></a>
 				</nav>
 			</div>
 		</div>
