--- a/index.html
+++ b/index.html
@@ -92,32 +92,34 @@
 				</div>
 			</div>
 			<div class="protect">
-				<div class="protect-body">
-					<div class="protect-body-column">
-						<div class="protect-body-column__image ibg">
-							<img src="Img/Protect/Image_01.png" alt="">
-						</div>			
-					</div>
-					<div class="protect-body-column-info">
-						<div class="protect-body-column__title">
-							<p>Your day</p>
-							<p>is protected</p>
+				<div class="container">
+					<div class="protect-body">
+						<div class="protect-body-column">
+							<div class="protect-body-column__image">
+								<img src="Img/Protect/Image_02.png" alt="">
+							</div>			
 						</div>
-						<div class="protect-body-column__text">
-							<p>There have not been any since we have lived here, said my mother.</p> 
-
-							<p>We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones, and the birds have deserted them a long while.</p>
-						</div>
-						<div class="protect-body-column-buttons">
-							<div class="protect-body-column-buttons__button">
-								<a href="" class="button__try btn btn--blue">
-							    	<span>Try to hack us</span>
-							    </a>
+						<div class="protect-body-column-info">
+							<div class="protect-body-column__title">
+								<p>Your day</p>
+								<p>is protected</p>
 							</div>
-							<div class="protect-body-column-buttons__button">
-								<a href="" class="button__more btn btn--grey">
-							    	Learn more
-							    </a>
+							<div class="protect-body-column__text">
+								<p>There have not been any since we have lived here, said my mother.</p> 
+
+								<p>We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones, and the birds have deserted them a long while.</p>
+							</div>
+							<div class="protect-body-column-buttons">
+								<div class="protect-body-column-buttons__button">
+									<a href="" class="button__try btn btn--blue">
+								    	<span>Try to hack us</span>
+								    </a>
+								</div>
+								<div class="protect-body-column-buttons__button">
+									<a href="" class="button__more btn btn--grey">
+								    	Learn more
+								    </a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -148,7 +150,38 @@
 						</div>
 					</div>
 				</div>
-			</div>					
+			</div>
+			<div class="interface">
+				<div class="container">
+					<div class="interface-header">
+						<div class="interface-header__title">
+							Beautiful Interface
+						</div>
+						<div class="interface-header__text">
+							Landing Screen
+						</div>
+					</div>
+
+					<ul class="interface-header-slider">
+						<li class="interface-header-slider__image ibg">
+							<img src="Img/Interface/image_05.png" alt="">
+						</li>
+						<li class="interface-header-slider__image ibg">
+							<img src="Img/Interface/image_04.png" alt="">
+						</li>
+						<li class="interface-header-slider__image ibg main">
+							<img src="Img/Interface/image_01.png" alt="">
+						</li>
+						<li class="interface-header-slider__image ibg">
+							<img src="Img/Interface/image_02.png" alt="">
+						</li>
+						<li class="interface-header-slider__image ibg">
+							<img src="Img/Interface/image_03.png" alt="">
+						</li>
+					</ul>
+
+				</div>
+			</div>			
 <footer>
 	<div class="container">
 		<div class="footer-body">
