--- a/index.html
+++ b/index.html
@@ -181,7 +181,31 @@
 					</ul>
 
 				</div>
-			</div>			
+			</div>
+			<div class="download">
+				<div class="container">
+					<div class="download-body">
+						<div class="download-body__logo">
+							<span>New</span>Providence
+						</div>
+						<div class="download-body__title">
+							Get it to your smartphone
+						</div>
+						<form action="#" class="download-body-form">
+							<input autocomplete="off" type="text" name="form[]" data-value="Join us" class="download-body-form__input">
+							<button class="download-body-form__button btn btn--green">
+								<span>Send Invite</span>
+							</button>
+						</form>
+						<div class="download-body__text">
+							or Download From
+						</div>
+						<a class="download-body__button btn btn--black" href="">
+							<span>Download on the<p>App Store</p></span>
+						</a>
+					</div>
+				</div>
+			</div>	
 <footer>
 	<div class="container">
 		<div class="footer-body">
