--- a/index.html
+++ b/index.html
@@ -205,7 +205,43 @@
 						</a>
 					</div>
 				</div>
-			</div>	
+			</div>
+			<div class="reviews">
+				<div class="container">
+					<div class="reviews-body">
+						<div class="reviews-body__leftArrow">
+							<img src="Img/Reviews/Icon_02.png" alt="">
+						</div>
+						<div class="reviews-body-main">
+							<div class="reviews-body-main__image">
+								<img src="Img/Reviews/Image_02.jpg" alt="">
+								<img class='mainImage' src="Img/Reviews/Image_01.jpg" alt="">
+								<img src="Img/Reviews/Image_03.jpg" alt="">
+							</div>
+							<div class="reviews-body-main__title">
+								New Providence is the great UI kit
+							</div>
+							<div class="reviews-body-main__text">
+								“Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.”
+							</div>
+							<div class="reviews-body-main__estimation">
+								<img src="Img/Reviews/Icon_01.png" alt="">
+								<img src="Img/Reviews/Icon_01.png" alt="">
+								<img src="Img/Reviews/Icon_01.png" alt="">
+								<img src="Img/Reviews/Icon_01.png" alt="">
+								<img src="Img/Reviews/Icon_01.png" alt="">
+							</div>
+							<div class="reviews-body-main__name">
+								Cameron Dowman
+							</div>
+						</div>
+						<div class="reviews-body__rightArrow">
+							<img src="Img/Reviews/Icon_03.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+
 <footer>
 	<div class="container">
 		<div class="footer-body">
