--- a/index.html
+++ b/index.html
@@ -241,7 +241,77 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="plan">
+				<div class="container">
+					<div class="plan-body">
+						<div class="plan-info">
+							<div class="plan-info__title">
+								<p>Choose your perfect plan</p>
+								<p><span>You are</span></p>
+							</div>
+							<div class="plan-info-switcher">
+								<div class="plan-info-switcher__button active">
+									Individual
+								</div>
+								<div class="plan-info-switcher__button">
+									Company
+								</div>
+							</div>
+							<div class="plan-info__text">
+								<p>Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.</p>
+								<p><span>Have a bigger team? <a href="">Let‘s talk</a></span></p>
+							</div>
+						</div>
+						<div class="plan-cards">
+							<div class="plan-cards-column active">
+								<div class="plan-cards-column__item">
+									<div class="plan-item__title">
+										Starter
+									</div>
+									<div class="plan-item__cost">
+										Free
+									</div>
+									<div class="plan-item__text amh">
+										Build your schedule every day
+									</div>
+									<div class="plan-item-features">
+										<ul class="plan-item-features__list amh">
+											<li><span>Unlimeted events</span></li>
+											<li><span>Connect Dropbox & Evernote</span></li>
+										</ul>
+									</div>
+									<div class="plan-item__button btn btn--blue">
+										Get started
+									</div>
+								</div>
+							</div>
+							<div class="plan-cards-column">
+								<div class="plan-cards-column__item">
+									<div class="plan-item__title">
+										Pro
+									</div>
+									<div class="plan-item__cost">
+										$4.99
+									</div>
+									<div class="plan-item__text amh">
+										Make your life better
+									</div>
+									<div class="plan-item-features">
+										<ul class="plan-item-features__list amh">
+											<li><span>Unlimeted events</span></li>
+											<li><span>Connect Dropbox & Evernote</span></li>
+											<li><span>Personal Assistant</span></li>
+										</ul>
+									</div>
+									<div class="plan-item__button btn btn--white">
+										Make me a Pro
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 <footer>
 	<div class="container">
 		<div class="footer-body">
