--- a/#Source/footer.html
+++ b/#Source/footer.html
@@ -1,7 +1,109 @@
 <footer>
 	<div class="container">
 		<div class="footer-body">
-			
+			<div class="footer-body-links">
+				<div class="footer-body-links__logo">
+					<img src="Img/Footer/Logo.png" alt="">
+				</div>
+				<div class="footer-body-links__text">
+					It was some time before he obtained any answer, and the reply, when made, was unpropitious.
+				</div>
+				<a href="" class="footer-body-links__button">
+					<img src="Img/Footer/Download.png" alt="">
+				</a>
+				<ul class="footer-body-links__social">
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_01.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_02.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_03.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_04.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_05.png" alt="">
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-body-more">
+				<div class="footer-body-more-column">
+					<div class="footer-body-more-column-item">
+						<div class="footer-item__title amh">
+							Learn More
+						</div>
+						<ul class="footer-item__links">
+							<li>
+								<a href="" class='links1 amh'>How it works?</a>
+							</li>
+							<li>
+								<a href="" class='links2 amh'>Meeting tools</a>
+							</li>
+							<li>
+								<a href="" class='links3 amh'>Live striming</a>
+							</li>
+							<li>
+								<a href="" class='links4 amh'>Contat method</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer-body-more-column">
+					<div class="footer-body-more-column-item">
+						<div class="footer-item__title amh">
+							About Us
+						</div>
+						<ul class="footer-item__links">
+							<li>
+								<a href="" class='links1 amh'>About us</a>
+							</li>
+							<li>
+								<a href="" class='links2 amh'>Features</a>
+							</li>
+							<li>
+								<a href="" class='links3 amh'>Privacy police</a>
+							</li>
+							<li>
+								<a href="" class='links4 amh'>Terms & Conditions</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer-body-more-column">
+					<div class="footer-body-more-column-item">
+						<div class="footer-item__title amh">
+							Support
+						</div>
+						<ul class="footer-item__links">
+							<li>
+								<a href="" class='links1 amh'>F.A.Q.</a>
+							</li>
+							<li>
+								<a href="" class='links2 amh'>Contact us</a>
+							</li>
+							<li>
+								<a href="" class='links3 amh'>Live chat</a>
+							</li>
+							<li>
+								<a href="" class='links4 amh'>Phone call</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>
