--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
 				<div class="container small">
 					<div class="features-columns">
 						<div class="features-item">
-							<div class="item__image amh">
+							<div class="item__image amh 480">
 								<img src="Img/Features/01.png" alt="">
 							</div>
-							<div class="item__title amh">
+							<div class="item__title amh 480">
 								Real-time all the time
 							</div>
 							<div class="features-item-body">
 								<div class="item-body__text">
-									<p class="amh1 amh">Thus much I thought proper to tell you in relation to yourself, lorem and to the trust I reposed in you.</p>
+									<p class="amh1 amh 480">Thus much I thought proper to tell you in relation to yourself, lorem and to the trust I reposed in you.</p>
 									<p>Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door. lorem</p>
 								</div>
 							</div>
 						</div>
 						<div class="features-item">
-							<div class="item__image amh">
+							<div class="item__image amh 480">
 								<img src="Img/Features/02.png" alt="">
 							</div>
-							<div class="item__title amh">
+							<div class="item__title amh 480">
 								Adopt without any obstacles
 							</div>
 							<div class="features-item-body">
 								<div class="item-body__text">
-									<p class="amh1 amh">This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that before!' she said.</p>
+									<p class="amh1 amh 480">This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that before!' she said.</p>
 									<p>This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such abstruse matters.</p>
 								</div>
 							</div>
@@ -312,10 +312,130 @@
 					</div>
 				</div>
 			</div>
+			<div class="newsletter">
+				<div class="container">
+					<div class="newsletter-body">
+						<div class="newsletter-body__title">
+							Subscribe our newsletters
+						</div>
+						<form action="#" class="newsletter-body-form">
+							<input autocomplete="off" type="text" name="form[]" data-value="Your e-mail" class="newsletter-body-form__input">
+							<button class="newsletter-body-form__button btn btn--green">
+								<span>Subscribe</span>
+							</button>
+						</form>
+						<div class="newsletter-body__text">
+							We promise to never spam you.
+						</div>
+					</div>
+				</div>
+			</div>
 <footer>
 	<div class="container">
 		<div class="footer-body">
-			
+			<div class="footer-body-links">
+				<div class="footer-body-links__logo">
+					<img src="Img/Footer/Logo.png" alt="">
+				</div>
+				<div class="footer-body-links__text">
+					It was some time before he obtained any answer, and the reply, when made, was unpropitious.
+				</div>
+				<a href="" class="footer-body-links__button">
+					<img src="Img/Footer/Download.png" alt="">
+				</a>
+				<ul class="footer-body-links__social">
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_01.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_02.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_03.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_04.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="Img/Footer/Icon_05.png" alt="">
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="footer-body-more">
+				<div class="footer-body-more-column">
+					<div class="footer-body-more-column-item">
+						<div class="footer-item__title amh">
+							Learn More
+						</div>
+						<ul class="footer-item__links">
+							<li>
+								<a href="" class='links1 amh'>How it works?</a>
+							</li>
+							<li>
+								<a href="" class='links2 amh'>Meeting tools</a>
+							</li>
+							<li>
+								<a href="" class='links3 amh'>Live striming</a>
+							</li>
+							<li>
+								<a href="" class='links4 amh'>Contat method</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer-body-more-column">
+					<div class="footer-body-more-column-item">
+						<div class="footer-item__title amh">
+							About Us
+						</div>
+						<ul class="footer-item__links">
+							<li>
+								<a href="" class='links1 amh'>About us</a>
+							</li>
+							<li>
+								<a href="" class='links2 amh'>Features</a>
+							</li>
+							<li>
+								<a href="" class='links3 amh'>Privacy police</a>
+							</li>
+							<li>
+								<a href="" class='links4 amh'>Terms & Conditions</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer-body-more-column">
+					<div class="footer-body-more-column-item">
+						<div class="footer-item__title amh">
+							Support
+						</div>
+						<ul class="footer-item__links">
+							<li>
+								<a href="" class='links1 amh'>F.A.Q.</a>
+							</li>
+							<li>
+								<a href="" class='links2 amh'>Contact us</a>
+							</li>
+							<li>
+								<a href="" class='links3 amh'>Live chat</a>
+							</li>
+							<li>
+								<a href="" class='links4 amh'>Phone call</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </footer>		</div>
